<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">L5R Toolbox</string>
    <string name="roller">Roller</string>
    <string name="simulator">Sim</string>
    <string name="health_tracker">Health Tracker</string>
    <string name="roller_tag">roller</string>
    <string name="simulator_tag">simulator</string>
    <string name="health_tracker_tag">health_tracker</string>
    <string name="editor">Editor</string>
    <string name="roller_new">"New"</string>
    <string name="roller_quick">"Quick Roll"</string>
    <string name="roller_mods">"Mods"</string>
    <string name="roller_mods_full">"Roll Modifications"</string>
    <string name="save_file_profiles">Profiles.sav</string>
    <string name="save_file_rolls">SavedRolls.sav</string>
    <string name="save_file_health">SavedHealth.sav</string>
    <string name="editor_title">"Title:"</string>
    <string name="editor_roll">"Roll:"</string>
    <string name="editor_keep">"K"</string>
    <string name="editor_explode">"Explode On:"</string>
    <string name="editor_bonus">"Bonus:"</string>
    <string name="editor_emphasis">"Emphasis"</string>
    <string name="editor_affected_by_wounds">"Affected by wound penalties"</string>
    <string name="editor_save">"Save"</string>
    <string name="editor_cancel">"Cancel"</string>
    <string name="allow_only_one_explosion">"Allow only 1 explosion"</string>
    <string name="editor_note">"Note: Set Explode Number to 0 for no explosions."</string>
    <string name="simulator_tn">"TN"</string>
    <string name="roller_menu_roll">"Roll"</string>
    <string name="roller_menu_edit">"Edit"</string>
    <string name="roller_menu_delete">"Delete"</string>
    <string name="simulator_menu_simulate">"Simulate"</string>
    <string name="simulator_menu_edit">"Edit"</string>
    <string name="simulator_menu_delete">"Delete"</string>
    <string name="mod_roll_penalty">"Roll Penalty"</string>
    <string name="mod_keep">"K"</string>
    <string name="mod_static_penalty">"Static Penalty"</string>
    <string name="mod_roll_bonus">"Roll Bonus"</string>
    <string name="mod_static_bonus">"Static Bonus"</string>
    <string name="mod_dice_to_keep">"Dice to Keep"</string>
    <string name="mod_highest">"Highest"</string>
    <string name="mod_lowest">"Lowest"</string>
    <string name="mod_full_attack">"Full Attack"</string>
    <string name="mod_save">"Save"</string>
    <string name="mod_vp_bonus">"1k1 VP Bonus"</string>
    <string name="health_change">"Change"</string>
    <string name="health_per_level">"Per Level"</string>
    <string name="health_healthy">"Healthy"</string>
    <string name="health_nicked">"Nicked"</string>
    <string name="health_grazed">"Grazed"</string>
    <string name="health_hurt">"Hurt"</string>
    <string name="health_injured">"Injured"</string>
    <string name="health_crippled">"Crippled"</string>
    <string name="health_down">"Down"</string>
    <string name="health_out">"Out"</string>
    <string name="health_wounds">"Wounds"</string>
    <string name="health_penalty">"Penalty"</string>
    <string name="health_take_damage">"Dmg"</string>
    <string name="health_apply_health_change">"Apply"</string>
    <string name="health_apply_penalties">"Apply Penalties"</string>
    <string name="health_heal">"Heal"</string>
    <string name="health_apply_wound_penalties">"Apply wound penalties to appropriate rolls"</string>
    <string name="health_note">"Note: Enter health per level, health at healthy, as well as wound penalty per level."</string>
    <string name="profile_choose_profile">"Choose Profile"</string>
    <string name="profile_new">"New"</string>
    <string name="profile_delete">"Delete"</string>
    <string name="profile_enter_title">"Enter Title"</string>
</resources>
