<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView />

    <TextView
        android:id="@+id/PenaltyColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/health_penalty"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/PerLevelColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/health_per_level"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/WoundsColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/health_wounds"
        android:textSize="12sp" />

</TableRow>