<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/HealthInputScroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay" >

    <RelativeLayout
        android:id="@+id/HealthTopLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/healthyNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/health_note"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/HealthChangeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/HealthChangeText"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="3dp"
            android:text="@string/health_change"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/HealthChangeText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/healthyNote"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/HealthChangeLabel"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/health_take_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/HealthChangeText"
            android:layout_toRightOf="@+id/HealthChangeText"
            android:text="@string/health_take_damage" />

        <Button
            android:id="@+id/health_heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/HealthChangeText"
            android:layout_toRightOf="@+id/health_take_damage"
            android:text="@string/health_heal" />

        <TextView
            android:id="@+id/healthyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/HealthyText"
            android:layout_alignRight="@+id/HealthChangeLabel"
            android:text="@string/health_healthy"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/HealthyText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/HealthChangeText"
            android:layout_below="@+id/health_take_damage"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/healthyLabel"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/perLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/PerLevelText"
            android:layout_alignRight="@+id/HealthChangeLabel"
            android:text="@string/health_per_level"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/PerLevelText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/HealthChangeText"
            android:layout_below="@+id/HealthyText"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/perLevelLabel"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/health_apply_health_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PerLevelText"
            android:layout_toRightOf="@+id/PerLevelText"
            android:text="@string/health_apply_health_change" />

        <CheckBox
            android:id="@+id/affected_by_wound_penalties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/health_apply_health_change"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:text="@string/health_apply_wound_penalties"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>