<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EditorScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/editor_title"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/TitleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:inputType="text"
            android:maxLength="25"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TitleText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/editor_roll"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/RollText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/roll"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roll"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/RollText"
            android:text="@string/editor_keep"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/KeepText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roll"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/keep"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/explode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/TitleText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/editor_explode"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ExplodeText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/explode"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/EmphasisCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/RollText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/editor_emphasis"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/RollText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/editor_bonus"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/BonusText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bonus"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/AllowOnlyOneExplosionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/EmphasisCheckbox"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/allow_only_one_explosion"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/affected_by_wound_penalties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AllowOnlyOneExplosionCheckBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:text="@string/editor_affected_by_wounds"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/affected_by_wound_penalties"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/editor_note"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>