<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profiles_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay" >

    <RelativeLayout
        android:id="@+id/profile_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/choose_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/profile_choose_profile"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/profile_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choose_profile"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:maxLength="25"
            android:prompt="@string/profile_choose_profile"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_spinner"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/button_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/profile_new" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/profile_delete" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@android:string/ok" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/new_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons_layout"
            android:layout_marginLeft="10dp"
            android:text="@string/profile_enter_title"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/new_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_profile_title"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/new_profile_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:gravity="left"
                android:inputType="text"
                android:maxLength="25"
                android:selectAllOnFocus="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/new_profile_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>